Fix inital parsing.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,29 +553,44 @@
     "\n",
     "def read_data(file_path: str) -> pd.DataFrame:\n",
     "    \"\"\"\n",
-    "    Reads the data from a comma-delimited text file into a pandas DataFrame, \n",
-    "    setting the first valid row as the header and the first column as a DateTime index.\n",
+    "    Reads the data from a CSV file into a pandas DataFrame, setting the correct DateTime index\n",
+    "    and using the first row as column names.\n",
     "\n",
     "    Parameters:\n",
     "    - file_path (str): The path to the data file.\n",
     "\n",
     "    Returns:\n",
-    "    - pd.DataFrame: A DataFrame with the Dow-Jones data, with correct column names and a DateTime index.\n",
+    "    - pd.DataFrame: A DataFrame with the correct dates as index and the stock tickers as column names.\n",
     "    \"\"\"\n",
-    "    # Read the file, assuming the first row is the header\n",
-    "    data = pd.read_csv(file_path, header=0)\n",
+    "    # Read the file.\n",
+    "    data = pd.read_csv(file_path)\n",
+    "\n",
+    "    # Rename the first value to be 'Date'.\n",
+    "    data.iloc[0, 0] = 'Date'\n",
+    "\n",
+    "    # Set the first row as the header.\n",
+    "    data.columns = data.iloc[0]\n",
+    "\n",
+    "    # Drop the first row.\n",
+    "    data = data.drop(data.index[0])\n",
+    "\n",
+    "    # Reset the index.\n",
+    "    data = data.reset_index(drop=True)\n",
     "    \n",
-    "    # Replace 'NaT' or similar placeholders in the first column with NaN and then drop rows with NaN in the index column\n",
-    "    data.iloc[:, 0] = pd.to_datetime(data.iloc[:, 0], errors='coerce')\n",
-    "    data = data.dropna(subset=[data.columns[0]])\n",
+    "    # Convert the date column to datetime. Assuming it's in format 'YYYYMMDD'.\n",
+    "    # data['Date'] = pd.to_datetime(data['Date'], format='%Y%m%d')\n",
     "    \n",
-    "    # Rename columns if they are unnamed, e.g., 'Unnamed: X' by using a prefix and a range based on the number of columns\n",
-    "    unnamed_columns = data.columns.str.contains('Unnamed')\n",
-    "    if any(unnamed_columns):\n",
-    "        data.columns = ['Date'] + [f'Col_{i}' for i in range(1, len(data.columns))]\n",
+    "    # Set the date column as the index\n",
+    "    # data.set_index('Date', inplace=True)\n",
+    "\n",
+    "    # Assuming the first row of actual data contains the stock tickers\n",
+    "    # If the 'Col_X' are just placeholders and the actual tickers are in a row, we can do the following:\n",
+    "    # data.columns = data.iloc[0]  # Set the first row as column headers\n",
+    "    # data = data.drop(data.index[0])  # Drop the first row now that it's been used as headers\n",
     "    \n",
-    "    # Set the first column as the DateTime index\n",
-    "    data.set_index('Date', inplace=True)\n",
+    "    # If the file has a specific row for headers that was not correctly interpreted,\n",
+    "    # we could explicitly pass the row index to header parameter.\n",
+    "    # data = pd.read_csv(file_path, header=some_row_index)\n",
     "    \n",
     "    return data"
    ]
@@ -589,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,46 +719,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Unnamed: 1 Unnamed: 2 Unnamed: 3 Unnamed: 4 Unnamed: 5 Unnamed: 6   \n",
-      "Date                                                                           \n",
-      "NaT              ^DJI       AAPL        AXP         BA        CAT       CSCO  \\\n",
-      "2014-10-29   16974.31     105.54      87.13     120.07      96.58      23.38   \n",
-      "2014-10-30   17195.42     105.18      87.52      120.8      96.55      23.36   \n",
-      "2014-10-31   17390.52     106.18      88.72     121.86      97.75      23.74   \n",
-      "2014-11-03   17366.24     107.56      89.61     122.95      96.61      23.85   \n",
+      "0        Date      ^DJI    AAPL    AXP      BA    CAT   CSCO     CVX     DD   \n",
+      "0  20141029.0  16974.31  105.54  87.13  120.07  96.58  23.38  112.38  61.77  \\\n",
+      "1  20141030.0  17195.42  105.18  87.52   120.8  96.55  23.36  112.44  62.57   \n",
+      "2  20141031.0  17390.52  106.18  88.72  121.86  97.75  23.74  115.08  63.95   \n",
+      "3  20141103.0  17366.24  107.56  89.61  122.95  96.61  23.85  112.04   63.7   \n",
+      "4  20141104.0  17383.84  106.77  90.13  122.77  95.05  24.14  110.69  63.36   \n",
       "\n",
-      "           Unnamed: 7 Unnamed: 8 Unnamed: 9 Unnamed: 10  ... Unnamed: 22   \n",
-      "Date                                                     ...               \n",
-      "NaT               CVX         DD        DIS          GE  ...         NKE  \\\n",
-      "2014-10-29     112.38      61.77       87.9       24.76  ...       90.94   \n",
-      "2014-10-30     112.44      62.57      88.57       24.76  ...       91.98   \n",
-      "2014-10-31     115.08      63.95      89.71        24.9  ...       91.95   \n",
-      "2014-11-03     112.04       63.7      90.04       24.79  ...       92.43   \n",
+      "0    DIS  ...    NKE    PFE     PG    TRV    UNH     UTX      V     VZ    WMT   \n",
+      "0   87.9  ...  90.94  28.52   83.8  97.18  91.52  103.46  53.28  47.51  74.53  \\\n",
+      "1  88.57  ...  91.98  28.86  84.19  97.75  92.42  103.94  58.74  47.58  74.59   \n",
+      "2  89.71  ...  91.95  28.97   84.5  98.53  93.54  104.59  59.93  47.91  74.41   \n",
+      "3  90.04  ...  92.43   29.2  84.61   97.7  93.39   103.9  59.96  48.05  74.42   \n",
+      "4   88.7  ...  92.92  29.28  85.83  98.85  93.51  104.47  60.31  47.99  75.38   \n",
       "\n",
-      "           Unnamed: 23 Unnamed: 24 Unnamed: 25 Unnamed: 26 Unnamed: 27   \n",
-      "Date                                                                     \n",
-      "NaT                PFE          PG         TRV         UNH         UTX  \\\n",
-      "2014-10-29       28.52        83.8       97.18       91.52      103.46   \n",
-      "2014-10-30       28.86       84.19       97.75       92.42      103.94   \n",
-      "2014-10-31       28.97        84.5       98.53       93.54      104.59   \n",
-      "2014-11-03        29.2       84.61        97.7       93.39       103.9   \n",
+      "0    XOM  \n",
+      "0  91.59  \n",
+      "1  91.45  \n",
+      "2  93.64  \n",
+      "3  92.24  \n",
+      "4  91.52  \n",
       "\n",
-      "           Unnamed: 28 Unnamed: 29 Unnamed: 30 Unnamed: 31  \n",
-      "Date                                                        \n",
-      "NaT                  V          VZ         WMT         XOM  \n",
-      "2014-10-29       53.28       47.51       74.53       91.59  \n",
-      "2014-10-30       58.74       47.58       74.59       91.45  \n",
-      "2014-10-31       59.93       47.91       74.41       93.64  \n",
-      "2014-11-03       59.96       48.05       74.42       92.24  \n",
-      "\n",
-      "[5 rows x 31 columns]\n"
+      "[5 rows x 32 columns]\n"
      ]
     }
    ],
