Correctly parse and change numerical date objects into DateTime objects in read_csv() method.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -576,6 +576,15 @@
     "\n",
     "    # Reset the index.\n",
     "    data = data.reset_index(drop=True)\n",
+    "\n",
+    "    # Convert numerical dates to string.\n",
+    "    data['Date'] = data['Date'].astype(str)\n",
+    "\n",
+    "    # Remove the '.0' part (if it exists).\n",
+    "    data['Date'] = data['Date'].str.replace(r'\\.0$', '', regex=True)\n",
+    "\n",
+    "    # Convert string dates to DateTime objects.\n",
+    "    data['Date'] = pd.to_datetime(data['Date'], format='%Y%m%d')\n",
     "    \n",
     "    # Convert the date column to datetime. Assuming it's in format 'YYYYMMDD'.\n",
     "    # data['Date'] = pd.to_datetime(data['Date'], format='%Y%m%d')\n",
@@ -719,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
