Fully finish and correctly implement read_csv() method.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,22 +585,10 @@
     "\n",
     "    # Convert string dates to DateTime objects.\n",
     "    data['Date'] = pd.to_datetime(data['Date'], format='%Y%m%d')\n",
-    "    \n",
-    "    # Convert the date column to datetime. Assuming it's in format 'YYYYMMDD'.\n",
-    "    # data['Date'] = pd.to_datetime(data['Date'], format='%Y%m%d')\n",
-    "    \n",
-    "    # Set the date column as the index\n",
-    "    # data.set_index('Date', inplace=True)\n",
-    "\n",
-    "    # Assuming the first row of actual data contains the stock tickers\n",
-    "    # If the 'Col_X' are just placeholders and the actual tickers are in a row, we can do the following:\n",
-    "    # data.columns = data.iloc[0]  # Set the first row as column headers\n",
-    "    # data = data.drop(data.index[0])  # Drop the first row now that it's been used as headers\n",
-    "    \n",
-    "    # If the file has a specific row for headers that was not correctly interpreted,\n",
-    "    # we could explicitly pass the row index to header parameter.\n",
-    "    # data = pd.read_csv(file_path, header=some_row_index)\n",
-    "    \n",
+    "        \n",
+    "    # Set the date column as the index.\n",
+    "    data.set_index('Date', inplace=True)\n",
+    "        \n",
     "    return data"
    ]
   },
@@ -613,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,35 +716,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0        Date      ^DJI    AAPL    AXP      BA    CAT   CSCO     CVX     DD   \n",
-      "0  20141029.0  16974.31  105.54  87.13  120.07  96.58  23.38  112.38  61.77  \\\n",
-      "1  20141030.0  17195.42  105.18  87.52   120.8  96.55  23.36  112.44  62.57   \n",
-      "2  20141031.0  17390.52  106.18  88.72  121.86  97.75  23.74  115.08  63.95   \n",
-      "3  20141103.0  17366.24  107.56  89.61  122.95  96.61  23.85  112.04   63.7   \n",
-      "4  20141104.0  17383.84  106.77  90.13  122.77  95.05  24.14  110.69  63.36   \n",
+      "0               ^DJI    AAPL    AXP      BA    CAT   CSCO     CVX     DD   \n",
+      "Date                                                                       \n",
+      "2014-10-29  16974.31  105.54  87.13  120.07  96.58  23.38  112.38  61.77  \\\n",
+      "2014-10-30  17195.42  105.18  87.52   120.8  96.55  23.36  112.44  62.57   \n",
+      "2014-10-31  17390.52  106.18  88.72  121.86  97.75  23.74  115.08  63.95   \n",
+      "2014-11-03  17366.24  107.56  89.61  122.95  96.61  23.85  112.04   63.7   \n",
+      "2014-11-04  17383.84  106.77  90.13  122.77  95.05  24.14  110.69  63.36   \n",
       "\n",
-      "0    DIS  ...    NKE    PFE     PG    TRV    UNH     UTX      V     VZ    WMT   \n",
-      "0   87.9  ...  90.94  28.52   83.8  97.18  91.52  103.46  53.28  47.51  74.53  \\\n",
-      "1  88.57  ...  91.98  28.86  84.19  97.75  92.42  103.94  58.74  47.58  74.59   \n",
-      "2  89.71  ...  91.95  28.97   84.5  98.53  93.54  104.59  59.93  47.91  74.41   \n",
-      "3  90.04  ...  92.43   29.2  84.61   97.7  93.39   103.9  59.96  48.05  74.42   \n",
-      "4   88.7  ...  92.92  29.28  85.83  98.85  93.51  104.47  60.31  47.99  75.38   \n",
+      "0             DIS     GE  ...    NKE    PFE     PG    TRV    UNH     UTX   \n",
+      "Date                      ...                                              \n",
+      "2014-10-29   87.9  24.76  ...  90.94  28.52   83.8  97.18  91.52  103.46  \\\n",
+      "2014-10-30  88.57  24.76  ...  91.98  28.86  84.19  97.75  92.42  103.94   \n",
+      "2014-10-31  89.71   24.9  ...  91.95  28.97   84.5  98.53  93.54  104.59   \n",
+      "2014-11-03  90.04  24.79  ...  92.43   29.2  84.61   97.7  93.39   103.9   \n",
+      "2014-11-04   88.7  24.79  ...  92.92  29.28  85.83  98.85  93.51  104.47   \n",
       "\n",
-      "0    XOM  \n",
-      "0  91.59  \n",
-      "1  91.45  \n",
-      "2  93.64  \n",
-      "3  92.24  \n",
-      "4  91.52  \n",
+      "0               V     VZ    WMT    XOM  \n",
+      "Date                                    \n",
+      "2014-10-29  53.28  47.51  74.53  91.59  \n",
+      "2014-10-30  58.74  47.58  74.59  91.45  \n",
+      "2014-10-31  59.93  47.91  74.41  93.64  \n",
+      "2014-11-03  59.96  48.05  74.42  92.24  \n",
+      "2014-11-04  60.31  47.99  75.38  91.52  \n",
       "\n",
-      "[5 rows x 32 columns]\n"
+      "[5 rows x 31 columns]\n"
      ]
     }
    ],
