Finish Q5 in Python.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,9 +720,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 173,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0         ^DJI       AAPL        AXP         BA        CAT\n",
+      "0                                                         \n",
+      "^DJI  5.634794   6.416804   4.809443   5.745769   5.992771\n",
+      "AAPL  6.416804  17.189758   5.163950   8.117157   7.504042\n",
+      "AXP   4.809443   5.163950  11.801005   3.709621   5.023068\n",
+      "BA    5.745769   8.117157   3.709621  11.578327   5.912234\n",
+      "CAT   5.992771   7.504042   5.023068   5.912234  15.586600\n"
+     ]
+    }
+   ],
    "source": [
     "# file_path = 'Midtermdata/data.tsv'\n",
     "file_path = 'Midtermdata/data.csv'\n",
@@ -733,17 +747,19 @@
     "# print(data.head())\n",
     "\n",
     "# Step 2 and 3: Convert to simple returns and annualize.\n",
-    "daily_returns = calculate_simple_returns(data['^DJI'])\n",
+    "daily_returns = calculate_simple_returns(data)\n",
     "annual_returns = annualize_returns(daily_returns)\n",
     "\n",
-    "# # Step 4: Move the index column out of the matrix.\n",
-    "# data_without_index, index_column = extract_index(data)\n",
+    "# print(annual_returns)\n",
     "\n",
-    "# # Step 5: Compute the covariance matrix.\n",
-    "# Qts = compute_covariance_matrix(annual_returns)\n",
+    "# Step 4: Move the index column out of the matrix.\n",
+    "## Already done in read_csv().\n",
     "\n",
-    "# # Step 6: Print the first five rows and columns of the covariance matrix.\n",
-    "# print(Qts.iloc[:5, :5])"
+    "# Step 5: Compute the covariance matrix.\n",
+    "Qts = compute_covariance_matrix(annual_returns)\n",
+    "\n",
+    "# Step 6: Print the first five rows and columns of the covariance matrix.\n",
+    "print(Qts.iloc[:5, :5])"
    ]
   },
   {
@@ -757,7 +773,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following section implements the same concepts as above but in R as parsing the data was easier and more efficient in R."
+    "The following section implements the same concepts as above but in R when it was difficult to parse the data in Python. \n",
+    "\n",
+    "However, **please use the Python results** as I was able to fix/debug the issues."
    ]
   },
   {
@@ -871,63 +889,6 @@
     "\n",
     "# Step 6: Print out the first five rows and columns of the covariance matrix.\n",
     "print(Qts[1:5, 1:5])\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The table below shows the annualized returns for selected stocks:\n",
-    "\n",
-    "| Ticker | Annualized Return |\n",
-    "| ------ | ----------------- |\n",
-    "| ^DJI   | 4.91%             |\n",
-    "| AAPL   | 12.34%            |\n",
-    "| AXP    | -13.92%           |\n",
-    "| BA     | 22.56%            |\n",
-    "| CAT    | -27.28%           |\n",
-    "| CSCO   | 24.10%            |\n",
-    "| CVX    | -20.34%           |\n",
-    "| DD     | 0.44%             |\n",
-    "| DIS    | 28.20%            |\n",
-    "| GE     | 20.38%            |\n",
-    "| GS     | 3.93%             |\n",
-    "| HD     | 30.27%            |\n",
-    "| IBM    | -7.88%            |\n",
-    "| INTC   | 8.08%             |\n",
-    "| JNJ    | -1.32%            |\n",
-    "| JPM    | 12.55%            |\n",
-    "| KO     | 8.23%             |\n",
-    "| MCD    | 24.77%            |\n",
-    "| MMM    | 7.65%             |\n",
-    "| MRK    | -0.56%            |\n",
-    "| MSFT   | 21.98%            |\n",
-    "| NKE    | 39.47%            |\n",
-    "| PFE    | 19.97%            |\n",
-    "| PG     | -6.73%            |\n",
-    "| TRV    | 16.45%            |\n",
-    "| UNH    | 27.39%            |\n",
-    "| UTX    | -1.26%            |\n",
-    "| V      | 41.52%            |\n",
-    "| VZ     | -1.20%            |\n",
-    "| WMT    | -23.16%           |\n",
-    "| XOM    | -9.78%            |"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Below is the covariance matrix for a subset of the stocks:\n",
-    "\n",
-    "```plaintext\n",
-    "             ^DJI         AAPL          AXP           BA          CAT\n",
-    "^DJI 8.873133e-05 1.010457e-04 7.573449e-05 9.047886e-05 9.436840e-05\n",
-    "AAPL 1.010457e-04 2.706878e-04 8.131692e-05 1.278212e-04 1.181664e-04\n",
-    "AXP  7.573449e-05 8.131692e-05 1.858309e-04 5.841554e-05 7.909844e-05\n",
-    "BA   9.047886e-05 1.278212e-04 5.841554e-05 1.823244e-04 9.310019e-05\n",
-    "CAT  9.436840e-05 1.181664e-04 7.909844e-05 9.310019e-05 2.454428e-04\n",
     "```"
    ]
   },
