Write analyze_data() method which completes S2 - S5 of Q5.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -873,15 +873,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### *Step 1.*"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -900,7 +893,39 @@
     "    \"\"\"\n",
     "    X = sm.add_constant(index_returns)  # Add a constant to include intercept in the model\n",
     "    model = sm.OLS(security_returns, X).fit()\n",
-    "    return model.params[0], model.params[1], model.resid.std()"
+    "    return model.params[0], model.params[1], model.resid.std()\n",
+    "\n",
+    "def analyze_data(file_path: str) -> None:\n",
+    "    \"\"\"\n",
+    "    Analyzes Dow-Jones data to compute and print statistical measures.\n",
+    "\n",
+    "    Performs regressions of each company's returns onto the index return,\n",
+    "    prints intercepts, slopes, idiosyncratic standard deviations, variance of the index,\n",
+    "    and part of the covariance matrix.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - file_path (str): Path to the CSV file containing the Dow-Jones data.\n",
+    "    \"\"\"\n",
+    "    data = read_data(file_path)\n",
+    "    daily_returns = calculate_daily_returns(data)\n",
+    "    index_returns = daily_returns['^DJI']\n",
+    "\n",
+    "    results = pd.DataFrame(columns=['Intercept', 'Beta', 'Sigma_R'])\n",
+    "\n",
+    "    # Loop through securities and regress each against the index\n",
+    "    for column in daily_returns.columns[1:]:  # Skip index column\n",
+    "        alpha, beta, sigma_r = perform_regression(index_returns, daily_returns[column])\n",
+    "        results.loc[column] = [alpha, beta, sigma_r]\n",
+    "\n",
+    "    print(\"Intercepts, Betas, and Idiosyncratic Standard Deviations:\")\n",
+    "    print(results)\n",
+    "\n",
+    "    sigma_M_squared = np.var(index_returns)\n",
+    "    print(f\"\\nVariance of the Index's Return: {sigma_M_squared}\")\n",
+    "\n",
+    "    Qts = daily_returns.cov()\n",
+    "    print(\"\\nCovariance Matrix Qts (First 5 Rows and Columns):\")\n",
+    "    print(Qts.iloc[:5, :5])"
    ]
   },
   {
