Use calculate_simple_returns() method for reusability.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -907,7 +907,7 @@
     "    - file_path (str): Path to the CSV file containing the Dow-Jones data.\n",
     "    \"\"\"\n",
     "    data = read_data(file_path)\n",
-    "    daily_returns = calculate_daily_returns(data)\n",
+    "    daily_returns = calculate_simple_returns(data)\n",
     "    index_returns = daily_returns['^DJI']\n",
     "\n",
     "    results = pd.DataFrame(columns=['Intercept', 'Beta', 'Sigma_R'])\n",
