Complete Q5 in Python.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,13 +672,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0               ^DJI    AAPL    AXP      BA    CAT   CSCO     CVX     DD   \n",
+      "Date                                                                       \n",
+      "2014-10-29  16974.31  105.54  87.13  120.07  96.58  23.38  112.38  61.77  \\\n",
+      "2014-10-30  17195.42  105.18  87.52  120.80  96.55  23.36  112.44  62.57   \n",
+      "2014-10-31  17390.52  106.18  88.72  121.86  97.75  23.74  115.08  63.95   \n",
+      "2014-11-03  17366.24  107.56  89.61  122.95  96.61  23.85  112.04  63.70   \n",
+      "2014-11-04  17383.84  106.77  90.13  122.77  95.05  24.14  110.69  63.36   \n",
+      "\n",
+      "0             DIS     GE  ...    NKE    PFE     PG    TRV    UNH     UTX   \n",
+      "Date                      ...                                              \n",
+      "2014-10-29  87.90  24.76  ...  90.94  28.52  83.80  97.18  91.52  103.46  \\\n",
+      "2014-10-30  88.57  24.76  ...  91.98  28.86  84.19  97.75  92.42  103.94   \n",
+      "2014-10-31  89.71  24.90  ...  91.95  28.97  84.50  98.53  93.54  104.59   \n",
+      "2014-11-03  90.04  24.79  ...  92.43  29.20  84.61  97.70  93.39  103.90   \n",
+      "2014-11-04  88.70  24.79  ...  92.92  29.28  85.83  98.85  93.51  104.47   \n",
+      "\n",
+      "0               V     VZ    WMT    XOM  \n",
+      "Date                                    \n",
+      "2014-10-29  53.28  47.51  74.53  91.59  \n",
+      "2014-10-30  58.74  47.58  74.59  91.45  \n",
+      "2014-10-31  59.93  47.91  74.41  93.64  \n",
+      "2014-11-03  59.96  48.05  74.42  92.24  \n",
+      "2014-11-04  60.31  47.99  75.38  91.52  \n",
+      "\n",
+      "[5 rows x 31 columns]\n",
       "0         ^DJI       AAPL        AXP         BA        CAT\n",
       "0                                                         \n",
       "^DJI  5.634794   6.416804   4.809443   5.745769   5.992771\n",
@@ -696,7 +721,7 @@
     "# Step 1: Read in the data.\n",
     "data = read_data(file_path)\n",
     "\n",
-    "# print(data.head())\n",
+    "print(data.head())\n",
     "\n",
     "# Step 2 and 3: Convert to simple returns and annualize.\n",
     "daily_returns = calculate_simple_returns(data)\n",
@@ -874,9 +899,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intercepts, Betas, and Idiosyncratic Standard Deviations:\n",
+      "      Intercept      Beta   Sigma_R\n",
+      "AAPL   0.000268  1.138782  0.012475\n",
+      "AXP   -0.000719  0.853526  0.011009\n",
+      "BA     0.000697  1.019695  0.009490\n",
+      "CAT   -0.001290  1.063530  0.012045\n",
+      "CSCO   0.000750  1.060068  0.009936\n",
+      "CVX   -0.001031  1.148306  0.012780\n",
+      "DD    -0.000181  1.020580  0.011313\n",
+      "DIS    0.000940  0.917125  0.010339\n",
+      "GE     0.000601  1.065219  0.009995\n",
+      "GS    -0.000071  1.165276  0.006910\n",
+      "HD     0.001003  1.015542  0.007833\n",
+      "IBM   -0.000517  1.050286  0.008685\n",
+      "INTC   0.000126  0.999549  0.012832\n",
+      "JNJ   -0.000219  0.854040  0.006560\n",
+      "JPM    0.000263  1.204165  0.007180\n",
+      "KO     0.000197  0.662824  0.006618\n",
+      "MCD    0.000802  0.930011  0.009012\n",
+      "MMM    0.000116  0.963949  0.006070\n",
+      "MRK   -0.000208  0.953009  0.010229\n",
+      "MSFT   0.000630  1.243621  0.013432\n",
+      "NKE    0.001375  0.982035  0.009613\n",
+      "PFE    0.000620  0.885675  0.008155\n",
+      "PG    -0.000416  0.766293  0.006506\n",
+      "TRV    0.000483  0.873620  0.006558\n",
+      "UNH    0.000886  1.031037  0.011808\n",
+      "UTX   -0.000240  0.977089  0.008357\n",
+      "V      0.001430  1.118423  0.010289\n",
+      "VZ    -0.000194  0.748745  0.007216\n",
+      "WMT   -0.001070  0.775067  0.010807\n",
+      "XOM   -0.000593  1.051269  0.009551\n",
+      "\n",
+      "Variance of the Index's Return: 8.83749785920134e-05\n",
+      "\n",
+      "Covariance Matrix Qts (First 5 Rows and Columns):\n",
+      "0         ^DJI      AAPL       AXP        BA       CAT\n",
+      "0                                                     \n",
+      "^DJI  0.000089  0.000101  0.000076  0.000090  0.000094\n",
+      "AAPL  0.000101  0.000271  0.000081  0.000128  0.000118\n",
+      "AXP   0.000076  0.000081  0.000186  0.000058  0.000079\n",
+      "BA    0.000090  0.000128  0.000058  0.000182  0.000093\n",
+      "CAT   0.000094  0.000118  0.000079  0.000093  0.000245\n"
+     ]
+    }
+   ],
    "source": [
     "import statsmodels.api as sm\n",
     "\n",
@@ -925,7 +1000,9 @@
     "\n",
     "    Qts = daily_returns.cov()\n",
     "    print(\"\\nCovariance Matrix Qts (First 5 Rows and Columns):\")\n",
-    "    print(Qts.iloc[:5, :5])"
+    "    print(Qts.iloc[:5, :5])\n",
+    "\n",
+    "analyze_data(file_path)"
    ]
   },
   {
