Write disclaimer for R.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -1009,7 +1009,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Implementation in R"
+    "##### Implementation in R\n",
+    "\n",
+    "Below is the implementation in R, which I advise you to **not consider** as that was before I could fix the Python bugs. **Please use the Python results.**"
    ]
   },
   {
