Clean up comments/Markdown.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -884,8 +884,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Implementation in R\n",
-    "\n",
+    "##### Implementation in R"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Below is the implementation in R, which I advise you to **not consider** as that was before I could fix the Python bugs. **Please use the Python results.**"
    ]
   },
