Redefine port() for Q6.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -971,6 +971,36 @@
     "\n",
     "Clearly describe all steps in your program with comments. List your program in your answer document. No points will be awarded unless the steps associated with each part of the question are clearly distinguished. Also, submit the source code file."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def port(mu: np.ndarray, Q: np.ndarray, tau: float) -> (np.ndarray, float):\n",
+    "    \"\"\"\n",
+    "    Adjusted to also return the utility (expected return) of the optimized portfolio.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    - mu (np.ndarray): The mean return vector for the securities.\n",
+    "    - Q (np.ndarray): The covariance matrix of the securities' returns.\n",
+    "    - tau (float): The risk tolerance parameter.\n",
+    "    \n",
+    "    Returns:\n",
+    "    - h (np.ndarray): The optimized portfolio weights vector.\n",
+    "    - utility_value (float): The utility (expected return) of the optimized portfolio.\n",
+    "    \"\"\"\n",
+    "    n = mu.shape[0]  # Number of securities\n",
+    "    h = cp.Variable(n)\n",
+    "    utility = cp.quad_form(h, Q) * -0.5 + tau * cp.matmul(mu.T, h)  # Maximizing the utility function\n",
+    "    constraints = [cp.sum(h) == 1, h >= 0, h <= 0.1]  # Portfolio constraints\n",
+    "    problem = cp.Problem(cp.Maximize(utility), constraints)\n",
+    "    problem.solve()\n",
+    "\n",
+    "    utility_value = mu.T @ h.value  # Expected return for the optimized portfolio\n",
+    "    return h.value, utility_value"
+   ]
   }
  ],
  "metadata": {
