Write plot_efficient_frontiers() method for Q6.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -999,7 +999,43 @@
     "    problem.solve()\n",
     "\n",
     "    utility_value = mu.T @ h.value  # Expected return for the optimized portfolio\n",
-    "    return h.value, utility_value"
+    "    return h.value, utility_value\n",
+    "\n",
+    "def plot_efficient_frontiers(mu, Qts, Qsi, tau_range):\n",
+    "    \"\"\"\n",
+    "    Plots efficient frontiers for both time-series and single-index models.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - mu (np.ndarray): Mean returns vector.\n",
+    "    - Qts (np.ndarray): Covariance matrix from time-series model.\n",
+    "    - Qsi (np.ndarray): Covariance matrix from single-index model.\n",
+    "    - tau_range (np.ndarray): Range of risk tolerance values.\n",
+    "    \"\"\"\n",
+    "    returns_ts, risks_ts = [], []\n",
+    "    returns_si, risks_si = [], []\n",
+    "\n",
+    "    for tau in tau_range:\n",
+    "        # Time-series model\n",
+    "        weights_ts, utility_ts = port(mu, Qts, tau)\n",
+    "        risk_ts = np.sqrt(weights_ts.T @ Qts @ weights_ts)\n",
+    "        returns_ts.append(utility_ts)\n",
+    "        risks_ts.append(risk_ts)\n",
+    "\n",
+    "        # Single-index model\n",
+    "        weights_si, utility_si = port(mu, Qsi, tau)\n",
+    "        risk_si = np.sqrt(weights_si.T @ Qsi @ weights_si)\n",
+    "        returns_si.append(utility_si)\n",
+    "        risks_si.append(risk_si)\n",
+    "\n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    plt.plot(risks_ts, returns_ts, 'b-', label='Time-Series Model')\n",
+    "    plt.plot(risks_si, returns_si, 'r-', label='Single-Index Model')\n",
+    "    plt.xlabel('Risk (Standard Deviation)')\n",
+    "    plt.ylabel('Expected Return')\n",
+    "    plt.title('Efficient Frontier Comparison')\n",
+    "    plt.legend()\n",
+    "    plt.grid(True)\n",
+    "    plt.show()"
    ]
   }
  ],
